--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	  <span>
 	    <img class="tap-image" src="img/snowwhite.png"></a>
       <img class="tap-image hidden" id="eyes" src="img/snowwhite-white.png"></a>
-      <a class="button img-button" id="img-button-eyes"></a>
+      <a class="button img-button" id="img-button-eyes"> </a>
       </span>
     <div class="story hidden" id="empty-story">
       <p>Once upon a time,</p>
@@ -65,8 +65,8 @@
   <div id="queen" class="page">
 	  <h2>The Queen is a classic narcissist.</h2>
 	 <span>
-	    <img class="tap-image" src="img/queen.png"></a>
-      <img class="tap-image hidden" id="crown" src="img/queen-white.png"></a>
+	    <img class="tap-image" src="img/queen-white.png"></a>
+      <img class="tap-image hidden" id="crown" src="img/queen.png"></a>
       <a class="button img-button" id="img-button-crown"></a>
       </span>	 
     <div class="story hidden" id="queen-story">
@@ -86,8 +86,8 @@
   <div id="hunstman" class="page">
 	  <h2>The Huntsman is a failure.</h2>
     <span>
-	    <img class="tap-image" src="img/hunstman-white.png"></a>
-      <img class="tap-image hidden" id="knife" src="img/hunstman.png"></a>
+	    <img class="tap-image" src="img/huntsman.png"></a>
+      <img class="tap-image hidden" id="knife" src="img/huntsman-white.png"></a>
       <a class="button img-button img-button" id="img-button-knife"></a>
       </span>	 
     <div class="story hidden" id="hunstman-story">
@@ -105,8 +105,8 @@
   <div id="dwarves" class="page">
 	  <h2>The Dwarves are outsiders.</h2>
     <span>
-	    <img class="tap-image" src="img/dwarves-white.png"></a>
-      <img class="tap-image hidden" id="crowd" src="img/dwarves.png"></a>
+	    <img class="tap-image" src="img/dwarves.png"></a>
+      <img class="tap-image hidden" id="crowd" src="img/dwarves-white.png"></a>
       <a class="button img-button" id="img-button-crowd"></a>
       </span>	      
     <div class="story hidden" id="dwarves-story">
