--- a/index-noskrollr.html
+++ b/index-noskrollr.html
@@ -37,12 +37,16 @@
     </div>
 	  
 	<div id="02" class="static-page">
-	  <h3>Let's begin.</h3>
-	 <span>
+	  <h3>Let's begin.</h3>	  
+    <span>
 	    <img class="tap-image" src="img/hand.png"></a>
       <img class="tap-image hidden" id="hand" src="img/hand-white.png"></a>
       <a class="button img-button" id="img-button-hand"> </a>
       </span>
+    <div class="factoid closed" id="factoid01">
+      <p>Elements like this one reveal new and exciting information 
+      about the story.</p>
+    </div>   
     <div class="story hidden" id="howto-story">
       <p>Tap on the a button to read the story.</p>
       </div>      	  
@@ -278,6 +282,13 @@
 
 	<!-- JQuery please god don't conflict with skrollr -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
+<!-- Factoids -->
+<script type="text/javascript">
+document.getElementById('factoid01').onclick = function() {  
+  var className = ' ' + factoid01.className + ' ';  
+  if ( ~className.indexOf(' open ') ) { this.className = className.replace(' open ', ' ');} else { this.className += ' open';}}
+</script>
 
 
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
