--- a/index-noskrollr.html
+++ b/index-noskrollr.html
@@ -215,6 +215,7 @@
 	  
   <div id="10" class="static-page">
 	  <h2>The Prince is a necrophiliac.</h2>
+	  <img class="drawing" src="img/drawn-coffin.png"/>
     <span>
 	    <img class="tap-image" src="img/coffin-white.png"></a>
       <img class="tap-image hidden" id="death" src="img/coffin.png"></a>
