--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <div id="cover" class="page">
     <h1>Red, White, and Black</h1>
     <!-- <div class="jumpto" ><a href="#howto"><img src="img/down.png" alt="down button"></a></div> -->
-      <div class="svg-draw" style="position:absolute; top:600px;">
-  		<svg xmlns="http://www.w3.org/2000/svg" version="1.1" 
-    		  width="768px" height="400px">		    
+      <div class="svg-draw" style="position:absolute; top:600px; z-index:0 !important">
+    		<svg xmlns="http://www.w3.org/2000/svg" version="1.1" 
+      		  width="768px" height="400px">		    
         <path
   				data-100=
   				  "stroke-dashoffset:6000;
@@ -186,6 +186,7 @@
 	  
   <div id="prince" class="page">
 	  <h2>The Prince is a necrophiliac.</h2>
+	  <img src="img/drawn-coffin.png"/>
     <span>
 	    <img class="tap-image" src="img/coffin-white.png"></a>
       <img class="tap-image hidden" id="death" src="img/coffin.png"></a>
