--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="http:www.sherwoodandforbes.com/nsw/cache.manifest">
 <head>
 	<meta charset="utf-8">
 
@@ -24,24 +24,6 @@
       <div class="svg-draw" style="position:absolute; top:600px; z-index:0 !important">
     		<svg xmlns="http://www.w3.org/2000/svg" version="1.1" 
       		  width="768px" height="400px">		    
-    </div>
-	  
-	<div id="howto" class="page">
-	  <h3
-	    data-100="transform:rotate(0deg)" 
-      data-900="transform:rotate(-90deg)">Let's begin.</h3>
-	  <div class="factoid closed" id="factoid01">
-      <p>Elements like this one reveal new and exciting information 
-      about the story.</p>
-     </div>
-	 <span>
-	    <img class="tap-image" src="img/hand-white.png"></a>
-      <img class="tap-image hidden" id="hand" src="img/hand.png"></a>
-      <a class="button img-button" id="img-button-hand"></a>
-      </span>
-      <div class="svg-draw" style="position:absolute; top:600px;">
-  		<svg xmlns="http://www.w3.org/2000/svg" version="1.1" 
-    		  width="768px" height="400px">		    
         <path
   				data-100=
   				  "stroke-dashoffset:6000;
@@ -61,19 +43,21 @@
         		c13.917,0.819,27.015,6.549,40.932,6.549"
           /></svg>		
         </div>
-<<<<<<< HEAD
     </div>
 	  
 	<div id="howto" class="page">
-
+	  <h3
+	    data-100="transform:rotate(0deg)" 
+      data-900="transform:rotate(-90deg)">Let's begin.</h3>
+	  <div class="factoid closed" id="factoid01">
+      <p>Elements like this one reveal new and exciting information 
+      about the story.</p>
+     </div>
 	 <span>
 	    <img class="tap-image" src="img/hand-white.png"></a>
       <img class="tap-image hidden" id="hand" src="img/hand.png"></a>
       <a class="button img-button" id="img-button-hand"></a>
       </span> 
-=======
- 
->>>>>>> parent of 3070036... scrib
     <div class="story hidden" id="howto-story">
       <p>Tap on the a button to read the story.</p>
       </div>      	  
@@ -85,7 +69,7 @@
 	  <span>
 	    <img class="tap-image" src="img/snowwhite.png"></a>
       <img class="tap-image hidden" id="eyes" src="img/snowwhite-white.png"></a>
-      <a class="button img-button" id="img-button-eyes"></a>
+      <a class="button img-button" id="img-button-eyes"> </a>
       </span>
     <div class="story hidden" id="empty-story">
       <p>Once upon a time,</p>
@@ -109,8 +93,8 @@
   <div id="queen" class="page">
 	  <h2>The Queen is a classic narcissist.</h2>
 	 <span>
-	    <img class="tap-image" src="img/queen.png"></a>
-      <img class="tap-image hidden" id="crown" src="img/queen-white.png"></a>
+	    <img class="tap-image" src="img/queen-white.png"></a>
+      <img class="tap-image hidden" id="crown" src="img/queen.png"></a>
       <a class="button img-button" id="img-button-crown"></a>
       </span>	 
     <div class="story hidden" id="queen-story">
@@ -130,8 +114,8 @@
   <div id="hunstman" class="page">
 	  <h2>The Huntsman is a failure.</h2>
     <span>
-	    <img class="tap-image" src="img/hunstman-white.png"></a>
-      <img class="tap-image hidden" id="knife" src="img/hunstman.png"></a>
+	    <img class="tap-image" src="img/huntsman.png"></a>
+      <img class="tap-image hidden" id="knife" src="img/huntsman-white.png"></a>
       <a class="button img-button img-button" id="img-button-knife"></a>
       </span>	 
     <div class="story hidden" id="hunstman-story">
@@ -149,8 +133,8 @@
   <div id="dwarves" class="page">
 	  <h2>The Dwarves are outsiders.</h2>
     <span>
-	    <img class="tap-image" src="img/dwarves-white.png"></a>
-      <img class="tap-image hidden" id="crowd" src="img/dwarves.png"></a>
+	    <img class="tap-image" src="img/dwarves.png"></a>
+      <img class="tap-image hidden" id="crowd" src="img/dwarves-white.png"></a>
       <a class="button img-button" id="img-button-crowd"></a>
       </span>	      
     <div class="story hidden" id="dwarves-story">
@@ -202,6 +186,7 @@
 	  
   <div id="prince" class="page">
 	  <h2>The Prince is a necrophiliac.</h2>
+	  <img src="img/drawn-coffin.png"/>
     <span>
 	    <img class="tap-image" src="img/coffin-white.png"></a>
       <img class="tap-image hidden" id="death" src="img/coffin.png"></a>
@@ -248,12 +233,28 @@
 	  </div>
 	
 <!- Begin Javascript -------------------------------------------->
-
+  
+  <script type="text/javascript">
+document.getElementById('factoid01').onclick = function() {  
+  var className = ' ' + factoid01.className + ' ';  
+  if ( ~className.indexOf(' open ') ) { this.className = className.replace(' open ', ' ');} else { this.className += ' open';}}
+</script>  
 
 <!-- Skrollr -->
 <script type="text/javascript" src="scripts/skrollr.stylesheets.min.js"></script>
 <script type="text/javascript" src="scripts/skrollr.min.js"></script>
 <!--[if lt IE 9]><script type="text/javascript" src="scripts/skrollr.ie.min.js"></script><![endif]-->
+<script type="text/javascript">
+  var s = skrollr.init({
+  	edgeStrategy: 'set',
+  	easing: {
+  		WTF: Math.random,
+  		inverted: function(p) {
+  			return 1-p;
+      }
+  	}
+  });
+</script>
 
 
 	<!-- JQuery please god don't conflict with skrollr -->
