--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html manifest="http:www.sherwoodandforbes.com/nsw/cache.manifest">
+<html>
 <head>
 	<meta charset="utf-8">
-
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
 	<title>The New Snow White</title>
-
 	<link rel="stylesheet" type="text/css" href="styles/main.css" data-skrollr-stylesheet />
 	
 </head>
@@ -14,8 +11,8 @@
 <body>
 	
 	<div class="permanent-chrome">
-	  	<div id="progress"></div>
-      <a id="story-button" class="button">a</a>
+  	<div id="progress"></div>
+    <a id="story-button" class="button">a</a>
     </div>
 	
   <div id="cover" class="page">
