--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 	  </div>
 	  
   <div id="prince" class="page">
-	  <h2>The Prince is a necrophiliac.</h2>
+	  <img src="img/drawn-coffin.png"/>
     <span>
 	    <img class="tap-image" src="img/coffin-white.png"></a>
       <img class="tap-image hidden" id="death" src="img/coffin.png"></a>
@@ -175,6 +175,7 @@
       
       </span>	
 	  <!-- <div class="jumpto" ><a href="#love"><img src="img/down.png" alt="down button"></a></div> -->
+	 <h2>The Prince is a necrophiliac.</h2>
 	  </div>
 	  
   <div id="love" class="page">
