--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
 	  </div>
 	  
   <div id="prince" class="page">
-	  <img src="img/drawn-coffin.png"/>
     <span>
 	    <img class="tap-image" src="img/coffin-white.png"></a>
       <img class="tap-image hidden" id="death" src="img/coffin.png"></a>
       <a class="button img-button" id="img-button-death"></a>
       </span>	
+    <img class= "drawing" src="img/drawn-coffin.png"/>
     <span>
       <div class="story hidden" id="prince-story">
         <p>Despite her stillness, Snow White looked very much alive. No matter how much time passed, her red 
