--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 	  
 	<div id="howto" class="page">
 	  <h3>Let's begin.</h3>
+	  <div class="factoid closed" id="factoid01">
+      <p>Elements like this one reveal new and exciting information 
+      about the story.</p>
+     </div>
 	 <span>
 	    <img class="tap-image" src="img/hand-white.png"></a>
       <img class="tap-image hidden" id="hand" src="img/hand.png"></a>
